# -------------------------------------------------------------------------------------------------
# Set Executeable (Water Ripple Effect App)
# -------------------------------------------------------------------------------------------------
project(WaterRippleEffectApp)


# -------------------------------------------------------------------------------------------------
# Add a library with the above sources
# -------------------------------------------------------------------------------------------------
add_executable(${PROJECT_NAME}
    "${CMAKE_CURRENT_LIST_DIR}/src/main.cpp"
  )


# -------------------------------------------------------------------------------------------------
# Include Path
# -------------------------------------------------------------------------------------------------
target_include_directories(
    ${PROJECT_NAME} PUBLIC
        "${CMAKE_CURRENT_LIST_DIR}/src"
        "${CMAKE_SOURCE_DIR}/lib/src"
  )


# -------------------------------------------------------------------------------------------------
# Link libraries
# -------------------------------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME}
  PRIVATE
    sub::WaterRippleEffectLib
    GLUT::GLUT
  )
